// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui/flyout > should render 1`] = `
<div
  className="ms-TooltipHost root-116"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <button
    aria-label="text"
    className="msla-button ___frx9oy0_0000000 f14t3ns0"
    data-testid="callout-btn"
    onClick={[Function]}
    tabIndex={0}
  >
    <img
      alt=""
      className="___1t3eqhe_0000000 f1es1caq f1vdito0 f1o8d5g9 f1e4snpn fq57jwq f69yrfr lg"
      draggable={false}
      role="presentation"
      src="/src/lib/card/images/information_tiny.svg"
    />
  </button>
  <div
    hidden={true}
    id="tooltip0"
    style={
      {
        "border": 0,
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />
</div>
`;

exports[`ui/flyout > should render with a non-zero tab index 1`] = `
<div
  className="ms-TooltipHost root-116"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <button
    aria-label="text"
    className="msla-button ___frx9oy0_0000000 f14t3ns0"
    data-testid="callout-btn"
    onClick={[Function]}
    tabIndex={-1}
  >
    <img
      alt=""
      className="___1t3eqhe_0000000 f1es1caq f1vdito0 f1o8d5g9 f1e4snpn fq57jwq f69yrfr lg"
      draggable={false}
      role="presentation"
      src="/src/lib/card/images/information_tiny.svg"
    />
  </button>
  <div
    hidden={true}
    id="tooltip2"
    style={
      {
        "border": 0,
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />
</div>
`;

exports[`ui/flyout > should render with a title 1`] = `
<div
  className="ms-TooltipHost root-116"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <button
    aria-label="title"
    className="msla-button ___frx9oy0_0000000 f14t3ns0"
    data-testid="callout-btn"
    onClick={[Function]}
    tabIndex={0}
  >
    <img
      alt=""
      className="___1t3eqhe_0000000 f1es1caq f1vdito0 f1o8d5g9 f1e4snpn fq57jwq f69yrfr lg"
      draggable={false}
      role="presentation"
      src="/src/lib/card/images/information_tiny.svg"
    />
  </button>
  <div
    hidden={true}
    id="tooltip3"
    style={
      {
        "border": 0,
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />
</div>
`;

exports[`ui/flyout > should render with an ARIA label 1`] = `
<div
  className="ms-TooltipHost root-116"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <button
    aria-label="aria-label"
    className="msla-button ___frx9oy0_0000000 f14t3ns0"
    data-testid="callout-btn"
    onClick={[Function]}
    tabIndex={0}
  >
    <img
      alt=""
      className="___1t3eqhe_0000000 f1es1caq f1vdito0 f1o8d5g9 f1e4snpn fq57jwq f69yrfr lg"
      draggable={false}
      role="presentation"
      src="/src/lib/card/images/information_tiny.svg"
    />
  </button>
  <div
    hidden={true}
    id="tooltip1"
    style={
      {
        "border": 0,
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  >
    aria-label
  </div>
</div>
`;
